ingress/ingress/nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
spec:
  type: NodePort
  selector:
    app: nginx
    env: study
  ports:
    - name: http
      port:  80
      targetPort:  80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nginx
      env: study
  template:
    metadata:
      name: nginx
      labels:
        app: nginx
        env: study
    spec:
      containers:
        - name: nginx
          image: nginx:1.17.2-alpine
